--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^24.0.8",
+    "@types/prompt-sync": "^4.2.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "prompt-sync": "^4.2.0"
   }
 }
